# mediatracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  audit.toml  build.rs  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.github/workflows/: main.yml
backend/: auth.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  test_email.py
chart/: Chart.yaml  values.yaml
frontend/: package-lock.json  package.json
k8s/: ingress.yaml  traefik-helm-config.yaml
migrations/: 001_init.sql  002_add_media_types.sql  003_backfill_activity_log.sql  004_status_rename.sql  005_release_schedule.sql  006_fix_tmdb_poster_url.sql  007_telegram_notifications.sql  008_extend_media_metadata.sql  009_widen_metadata_varchars.sql  010_shikimori_id_and_episodes.sql  011_add_mal_id_to_media_items.sql  012_series_chapters.sql
scripts/: backfill-details.sh  backup-db.sh  build-deploy.sh  check-js-syntax.sh  restore-db.sh  validate-k8s-yaml.py
src/: app_state.rs  config.rs  lib.rs  main.rs  metrics.rs
templates/: admin.html  app_shell.html  auth_base.html  base.html  calendar.html  home.html  media_detail.html  media_drawer_content.html  search.html  settings.html  stats.html  tracking_list.html
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
tests/: app_js_syntax.rs  chapter_persistence.rs  episode_persistence.rs  integration_test.rs  route_auth.rs  route_health.rs  tracking_persistence.rs
(+133 files in other folders)
