[package]
name = "mediatracker"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.16"
reqwest = { version = "0.13", features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
dotenvy = "0.15"
envy = "0.4"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
anyhow = "1"
sha2 = "0.11"
hex = "0.4"
url = "2"
regex = "1"
